src/parser/snapshots/miniml__parser__tests__parse_hello_world.snap
---
source: src/parser/tests.rs
expression: ast
---
Expr(
    Apply(
        Ident(
            InternedString(println),
        ),
        Lit(
            String(
                InternedString(Hello, World!),
            ),
        ),
    ),
)
