src/parser/snapshots/miniml__parser__tests__parse_hex.snap
---
source: src/parser/tests.rs
expression: ast
---
Expr(
    Lit(
        Int(
            Int {
                value: 3735928559,
                radix: Hex,
            },
        ),
    ),
)
