src/parser/snapshots/miniml__parser__tests__parse_if.snap
---
source: src/parser/tests.rs
expression: ast
---
Expr(
    If {
        cond: Lit(
            Bool(
                true,
            ),
        ),
        then: Lit(
            Int(
                Int {
                    value: 1,
                    radix: Dec,
                },
            ),
        ),
        else_: Lit(
            Int(
                Int {
                    value: 2,
                    radix: Dec,
                },
            ),
        ),
    },
)
