src/parser/snapshots/miniml__parser__tests__parse_int.snap
---
source: src/parser/tests.rs
expression: ast
---
Expr(
    Lit(
        Int(
            InternedString(523),
        ),
    ),
)
