src/parser/snapshots/miniml__parser__tests__parse_lambda.snap
---
source: src/parser/tests.rs
expression: ast
---
Expr(
    Lit(
        Lambda(
            Lambda {
                param: Ident(
                    InternedString(x),
                ),
                body: Lit(
                    Int(
                        Int {
                            value: 1,
                            radix: Dec,
                        },
                    ),
                ),
            },
        ),
    ),
)
