src/parser/snapshots/miniml__parser__tests__parse_let.snap
---
source: src/parser/tests.rs
expression: ast
---
Expr(
    Let {
        name: InternedString(x),
        value: Lit(
            Int(
                InternedString(1),
            ),
        ),
        body: None,
    },
)
