src/parser/snapshots/miniml__parser__tests__parse_let_decl.snap
---
source: src/parser/tests.rs
expression: ast
---
Decl(
    Let(
        LetDecl {
            pattern: Ident(
                InternedString(x),
            ),
            value: Lit(
                Int(
                    Int {
                        value: 1,
                        radix: Dec,
                    },
                ),
            ),
        },
    ),
)
