src/parser/snapshots/miniml__parser__tests__parse_let_expr.snap
---
source: src/parser/tests.rs
expression: ast
---
Expr(
    Let(
        LetExpr {
            pattern: Ident(
                InternedString(x),
            ),
            value: Lit(
                Int(
                    Int {
                        value: 1,
                        radix: Dec,
                    },
                ),
            ),
            body: Infix {
                op: Add,
                lhs: Ident(
                    InternedString(x),
                ),
                rhs: Lit(
                    Int(
                        Int {
                            value: 1,
                            radix: Dec,
                        },
                    ),
                ),
            },
        },
    ),
)
